Cleaned up the note interface when viewing and editing a note. Fixed a bug where notes that span several days, the middle days would be visible on years they shouldn't be visible on.

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -292,7 +292,7 @@
       }
 
       .note-category{
-        font-size: 0.75rem;
+        font-size: 0.625rem;
         border-radius: 7px;
         padding: .2rem .4rem;
         margin-right: 5px;
