--- a/src/styles/notes.scss
+++ b/src/styles/notes.scss
@@ -10,6 +10,8 @@
   }
 
   form{
+    margin-bottom: 50px;
+
     .hide {
       display: none;
     }
@@ -32,19 +34,62 @@
     }
   }
 
-  .note-repeat{
-    float: right;
-    font-size: 12px;
+  .note-details{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    .note-time{
+      background-color: #444141;
+      color: #ffffff;
+    }
+
+    .note-repeats{
+      background-color: #bbbbbb;
+      color: #000;
+      margin-left: auto;
+    }
+
+    .note-category{
+      font-size: 0.75rem;
+      border-radius: 7px;
+      padding: .2rem .4rem;
+      margin-right: 5px;
+      margin-bottom: 5px;
+      box-shadow: 1px 2px 5px #6b6b6b;
+
+      span{
+        margin-right: 0.15rem;
+      }
+    }
+
+    .note-icon{
+      span{
+        margin-right: 0;
+      }
+    }
   }
 
-  .note-author{
-    text-align: right;
-    color: #383838;
-    font-size: 12px;
-  }
   .edit-controls{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    backdrop-filter: blur(2px);
+    left: 0;
+    bottom: 0;
+    height: 30px;
+    border-top: 1px solid #b5b5b5;
     display: flex;
     justify-content: space-around;
-    margin-top: 1rem;
+    flex-wrap: nowrap;
+    align-items: center;
+
+    .fa-edit, .fa-trash{
+      width: 25%;
+    }
+
+    .save{
+      width: 50%;
+    }
   }
 }
